# tck-py

./: .gitattributes  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMMIT_GUIDE.md  CONTRIBUTING.md  MANIFESTO.md  Makefile  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
.github/workflows/ISSUE_TEMPLATE/: config.yml
docs/: getting-started.md  index.md
docs/adr/: ADR-001-tck-as-separate-package.md  ADR-002-pytest-contract-inheritance-and-fixtures.md  ADR-003-mixin-classes-for-policy-contracts.md  ADR-004-centralized-shared-module.md
docs/user-guide/messaging/: consumer.md  delayed_messaging.md  producer.md
docs/user-guide/observability/: loggin.md  metrics.md  tracing.md
docs/user-guide/policies/: multi_tenancy.md
docs/user-guide/primitives/: cache.md  document_database.md  kv_store.md  object_sstorage.md  secrets.md
docs/user-guide/resilience/: circuit_breaker.md  distributed_lock.md  sagas.md  transactional_outbox.md
docs/user-guide/security/: iam.md
src/tck_py/messaging/: consumer.py  delayed_messaging.py  producer.py
src/tck_py/observability/: logging.py  metrics.py  tracing.py
src/tck_py/policies/: multi_tenancy.py
src/tck_py/primitives/: cache.py  document_database.py  kv_store.py  object_storage.py  secrets.py
src/tck_py/resilience/: circuit_breaker.py  distributed_lock.py  sagas.py  transactional_outbox.py
src/tck_py/security/: iam.py
src/tck_py/shared/: exceptions.py  models.py
tests/reference/messaging/: test_in_memory_delayed_messaging.py  test_in_memory_messaging.py
tests/reference/observability/: test_in_memory_logging.py  test_in_memory_metrics.py  test_in_memory_tracing.py
tests/reference/primitives/: test_in_memory_cache.py  test_in_memory_document_database.py  test_in_memory_kv_store.py  test_in_memory_object_storage.py  test_in_memory_secrets.py
tests/reference/resilience/: test_in_memory_circuit_breaker.py  test_in_memory_distributed_lock.py  test_in_memory_outbox.py  test_in_memory_sagas.py
tests/reference/security/: test_in_memory_iam.py
